Adjust web page and start JS coding

--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
    <title>Shopping List</title>
    <!-- Link to style.css -->
    <link rel="stylesheet" type="text/css" href="style.css">
-   <!-- Link to Bootstrap -->
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 <body>
    <header>
@@ -17,7 +15,7 @@
    <main>
       <div class="inputArea">
          <input id="userInput" type="text">
-         <button id="add">Submit</button>
+         <button id="submit">Submit</button>
       </div>
       <div class="mainList">
          <ul>
